grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._definitions)
    ),

    _definitions: $ => seq(
      repeat(';;'),
      choice($._module_item, $.toplevel_directive, seq($._seq_expression, repeat($.item_attribute))),
      repeat(choice(
        seq(repeat(';;'), choice($._module_item, $.toplevel_directive)),
        seq(repeat1(';;'), seq($._seq_expression, repeat($.item_attribute)))
      )),
      repeat(';;')
    ),

    // Toplevel

    value_specification: $ => seq(
      'val',
      optional($._extension_attribute),
      $.value_name,
      ':',
      $._type,
      repeat($.item_attribute)
    ),

    external: $ => seq(
      'external',
      optional($._extension_attribute),
      $.value_name,
      ':',
      $._type,
      '=',
      repeat1($.string),
      repeat($.item_attribute)
    ),

    type_definition: $ => seq(
      'type', optional($._extension_attribute), optional('nonrec'),
      sep1(seq('and', repeat($.attribute)), $.type_binding)
    ),

    type_binding: $ => seq(
      optional($.type_params),
      choice(
        seq(
          $._type_constructor,
          optional($._type_equation),
          optional(seq(
            '=',
            optional('private'),
            choice(
              $.variant_declaration,
              $.record_declaration,
              '..'
            )
          )),
          repeat($.type_constraint)
        ),
        seq(
          $.type_constructor_path,
          seq(
            '+=',
            optional('private'),
            $.variant_declaration,
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      $._type
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        seq('[', ']'),
        parenthesize('::')
      ),
      optional(choice(
        seq('of', $.constructor_argument),
        seq(':', $._simple_type),
        seq(':', $.constructor_argument, '->', $._simple_type),
        seq('=', $.constructor_path)
      )),
      repeat($.attribute)
    ),

    record_declaration: $ => seq(
      '{',
      sep1(seq(';', repeat($.attribute)), $.field_declaration),
      optional(seq(';', repeat($.attribute))),
      '}'
    ),

    field_declaration: $ => seq(
      optional('mutable'),
      $._field_name,
      ':',
      $._poly_type,
    ),

    type_constraint: $ => seq(
      'constraint',
      $._type,
      '=',
      $._type
    ),

    exception_definition: $ => seq(
      'exception',
      $.constructor_declaration,
      repeat($.item_attribute)
    ),

    module_definition: $ => seq(
      'module', optional($._extension_attribute), optional('rec'),
      sep1(seq('and', repeat($.attribute)), $.module_binding)
    ),

    module_binding: $ => seq(
      $._module_name,
      repeat($.module_parameter),
      optional(seq(':', $._module_type)),
      optional(seq('=', $._module_expression)),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      choice($._module_name, alias('_', $._module_name)),
      ':',
      $._module_type
    ))),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._extension_attribute),
      $._module_type_name,
      optional(seq('=', $._module_type)),
      repeat($.item_attribute)
    ),

    _module_type: $ => prec.right(seq(
      choice(
        $.module_type_path,
        $.signature,
        $.module_type_constraint,
        $.module_type_of,
        $.functor_type,
        $.parenthesized_module_type,
        $.extension
      ),
      repeat($.attribute)
    )),

    _module_expression: $ => prec.dynamic(1, prec.right(seq(
      choice(
        $._module_name,
        $.structure,
        $.functor,
        $.module_application,
        $.submodule,
        $.typed_module_expression,
        $.packed_module,
        $.parenthesized_module_expression,
        $.extension
      ),
      repeat($.attribute)
    ))),

    _poly_type: $ => seq(
      optional(seq($.polymorphic_types, '.')),
      $._type
    ),

    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.constructed_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.extension
    ),

    _type: $ => prec.right(seq(
      choice(
        $._simple_or_tuple_type,
        $.function_type,
        $.aliased_type
      ),
      repeat($.attribute)
    )),

    constructed_type: $ => prec(PREC.app, seq(
      choice(
        $._simple_type,
        parenthesize(sep1(',', $._type))
      ),
      $.type_constructor_path
    )),

    _extension_attribute: $ => prec.right(choice(
      seq('%', $.attribute_id),
      $.attribute,
      seq($._extension_attribute, repeat1($.attribute))
    )),

    // Constants

    string: $ => seq(
      '"',
      repeat(choice(
        /[^\\"%@]+|%|@/,
        $.escape_sequence,
        alias(/\\u\{[0-9A-Fa-f]+\}/, $.escape_sequence),
        alias(/\\\n[\t ]*/, $.escape_sequence),
        $.conversion_specification,
        $.pretty_printing_indication
      )),
      '"'
    ),

    _sign_operator: $ => choice('+', '-', '+.', '-.'),

    value_name: $ => choice(
      $._identifier,
      parenthesize(choice(
        $.prefix_operator,
        alias($._sign_operator, $.infix_operator),
        $.infix_operator,
        seq(
          '.',
          $.indexing_operator,
          choice(
            seq('(', ')'),
            seq('[', ']'),
            seq('{', '}')
          ),
          optional('<-')
        ),
        $.let_operator,
        $.and_operator,
        $.match_operator
      ))
    ),

    module_type_path: $ => choice(
      $._module_type_name,
      seq($._module_expression, '.', $._module_type_name)
    ),

    _extended_module_name: $ => seq(
      $._module_name,
      repeat(parenthesize($.module_path))
    ),

    module_path: $ => choice(
      $._extended_module_name,
      seq($._extended_module_name, '.', $.module_path)
    ),

    type_constructor_path: $ => choice(
      $._type_constructor,
      seq($._extended_module_name, '.', $.type_constructor_path)
    ),

    _field_name: $ => alias($._identifier, $.field_name),
    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._capitalized_identifier, $._identifier), $.module_type_name),
    _constructor_name: $ => alias($._capitalized_identifier, $.constructor_name),

    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    type_variable: $ => seq("'", choice($._identifier, $._capitalized_identifier)),
