test/corpus/module-items.txt
==============================
Value specification
:language(ocaml)
:language(ocaml_interface)
==============================

val x : t
val x : 'a . 'a

---

(compilation_unit
  (value_specification
    (value_name)
    type: (type_constructor_path
      (type_constructor)))
  (value_specification
    (value_name)
    type: (polymorphic_type
      (type_variable)
      type: (type_variable))))

==============================
External
:language(ocaml)
:language(ocaml_interface)
==============================

external x : int = "x"
external x : 'a . 'a = "x" {|x|}

---

(compilation_unit
  (external
    (value_name)
    type: (type_constructor_path
      (type_constructor))
    (string
      (string_content)))
  (external
    (value_name)
    type: (polymorphic_type
      (type_variable)
      type: (type_variable))
    (string
      (string_content))
    (quoted_string
      (quoted_string_content))))

==============================
Type definition
:language(ocaml)
:language(ocaml_interface)
==============================

type t
type nonrec 'a t = t and ('a, 'b) t = t
type t = private t
type t = A | B of t | C of t * t | D of {x : t} | []
type _ t =
  | A : t -> t
  | B : 'a . 'a -> 'a t
type t = {
  mutable x : t;
}
type t = t constraint 'a = t
type t = |
type t = external "x"
type t = external {a|x|a}
type t := A | B
type t = t = ..

---

(compilation_unit
  (type_definition
    (type_binding
      name: (type_constructor)))
  (type_definition
    (type_binding
      (type_variable)
      name: (type_constructor)
      body: (type_constructor_path
        (type_constructor)))
    (type_binding
      (type_variable)
      (type_variable)
      name: (type_constructor)
      body: (type_constructor_path
        (type_constructor))))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (type_constructor_path
        (type_constructor))))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (variant_declaration
        (constructor_declaration
          (constructor_name))
        (constructor_declaration
          (constructor_name)
          (type_constructor_path
            (type_constructor)))
        (constructor_declaration
          (constructor_name)
          (type_constructor_path
            (type_constructor))
          (type_constructor_path
            (type_constructor)))
        (constructor_declaration
          (constructor_name)
          (record_declaration
            (field_declaration
              (field_name)
              type: (type_constructor_path
                (type_constructor)))))
        (constructor_declaration
          (constructor_name)))))
  (type_definition
    (type_binding
      (type_variable)
      name: (type_constructor)
      body: (variant_declaration
        (constructor_declaration
          (constructor_name)
          (type_constructor_path
            (type_constructor))
          (type_constructor_path
            (type_constructor)))
        (constructor_declaration
          (constructor_name)
          (type_variable)
          (type_variable)
          (constructed_type
            (type_variable)
            (type_constructor_path
              (type_constructor)))))))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (record_declaration
        (field_declaration
          (field_name)
          type: (type_constructor_path
            (type_constructor))))))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (type_constructor_path
        (type_constructor))
      (type_constraint
        type: (type_variable)
        constraint: (type_constructor_path
          (type_constructor)))))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (variant_declaration)))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (external_declaration
        (string
          (string_content)))))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (external_declaration
        (quoted_string
          (quoted_string_content)))))
  (type_definition
    (type_binding
      name: (type_constructor)
      body: (variant_declaration
        (constructor_declaration
          (constructor_name))
        (constructor_declaration
          (constructor_name)))))
  (type_definition
    (type_binding
      name: (type_constructor)
      synonym: (type_constructor_path
        (type_constructor)))))


==============================
Exception definition
:language(ocaml)
:language(ocaml_interface)
==============================

exception E
exception E of t

---

(compilation_unit
  (exception_definition
    (constructor_declaration
      (constructor_name)))
  (exception_definition
    (constructor_declaration
      (constructor_name)
      (type_constructor_path
        (type_constructor)))))

==============================
Module definition
:language(ocaml)
:language(ocaml_interface)
==============================

module M : T
module M (M : T) : E
module rec M : T and M : T

module M = M
module M := M
module M : T = M
module M (M : T) = M
module rec M = N and N = M

module _ (_ : T) = M

---

(compilation_unit
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_path
        (module_type_name))))
  (module_definition
    (module_binding
      (module_name)
      (module_parameter
        (module_name)
        module_type: (module_type_path
          (module_type_name)))
      module_type: (module_type_path
        (module_type_name))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_path
        (module_type_name)))
    (module_binding
      (module_name)
      module_type: (module_type_path
        (module_type_name))))
  (module_definition
    (module_binding
      (module_name)
      body: (module_path
        (module_name))))
  (module_definition
    (module_binding
      (module_name)
      body: (extended_module_path
        (module_name))))
  (module_definition
    (module_binding
      (module_name)
      module_type: (module_type_path
        (module_type_name))
      body: (module_path
        (module_name))))
  (module_definition
    (module_binding
      (module_name)
      (module_parameter
        (module_name)
        module_type: (module_type_path
          (module_type_name)))
      body: (module_path
        (module_name))))
  (module_definition
    (module_binding
      (module_name)
      body: (module_path
        (module_name)))
    (module_binding
      (module_name)
      body: (module_path
        (module_name))))
  (module_definition
    (module_binding
      (module_name)
      (module_parameter
        (module_name)
        module_type: (module_type_path
          (module_type_name)))
      body: (module_path
        (module_name)))))

==============================
Module type definition
:language(ocaml)
:language(ocaml_interface)
==============================

module type T = T
module type T := T

---

(compilation_unit
  (module_type_definition
    (module_type_name)
    body: (module_type_path
      (module_type_name)))
  (module_type_definition
    (module_type_name)
    body: (module_type_path
      (module_type_name))))
